--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -1,4 +1,34 @@
 @import 'variables';
+
+body { height: 100vh; width: 100vw; }
+
+.left.visible.sidebar {
+    height: 100%;
+}
+.left.sidebar > .fluid.menu {
+    height: 100%;
+}
+
 body {
     background-color: $primaryColor;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+#root{
+    height:100%,
+}
+
+#root > div {
+    height: 100%;
+}
+
+.pusher-wrapper {
+    padding-top: 80px;
+    height: 100%;
+    > div.container {
+        height: 100%;
+    }
 }
