--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -1,4 +1,6 @@
 @import 'variables';
+@import 'buttons';
+@import 'node_modules/react-redux-toastr/src/styles/index';
 
 body { height: 100vh; width: 100vw; }
 
