small changes with form

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -27,6 +27,10 @@ body {
     height: 100%;
 }
 
+.pushable>.pusher {
+    overflow-y: scroll;
+}
+
 .pusher-wrapper {
     padding-top: 80px;
     height: 100%;
